# hackathon-0

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/skills/social-media-browser-mcp/: SKILL.md  TESTING_GUIDE.md  pyproject.toml
.claude/skills/social-media-watcher/: SKILL.md  pyproject.toml
.claude/skills/weekly-ceo-briefing/: SKILL.md  pyproject.toml
.claude/skills/xero-accounting/: SKILL.md  pyproject.toml
My_AI_Employee/: .env.example  .gitignore  README.md  README_SILVER.md  TROUBLESHOOTING.md  ecosystem.config.js  pyproject.toml  run_mcp.bat  run_mcp.py  run_mcp.sh  social-media-watcher.service.template  test_watcher_smoke.py  tmpclaude-871a-cwd
My_AI_Employee/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
My_AI_Employee/AI_Employee_Vault/.obsidian/: workspace.json
My_AI_Employee/AI_Employee_Vault/Done/: FILE_invoice_payment_reminder_20260113_152623.md  FILE_meeting_notes_project_alpha_20260113_152812.md  FILE_newsletter_january_2026_20260113_152812.md  FILE_test_quarterly_report_20260114_083353_FIXED.md  test-email-003-completed.md  test-email-004-completed.md  test_facebook_post_001.md  test_obsidian_approval.md  test_obsidian_workflow.md  test_obsidian_workflow_completed.md
My_AI_Employee/AI_Employee_Vault/Failed/: test-email-001-failed.md  test-email-002-failed.md
My_AI_Employee/AI_Employee_Vault/Logs/: 2026-01-24.json  2026-01-28.json
My_AI_Employee/AI_Employee_Vault/Needs_Action/: 20260126-154622-email-19b2f6cc01742dcc.md  20260126-154622-email-19b2f6cca29435be.md  20260126-154622-email-19b32414f2558443.md  20260126-154622-email-19bf1280ea98155c.md  20260126-154622-email-19bf195c7694110e.md  20260126-154622-email-19bf2038bde32f32.md  20260126-154622-email-19bf2e403e3e5a1c.md  20260126-154622-email-19bf3bb0594df77f.md  20260126-154622-email-19bf6bc2a25a3462.md  20260126-154622-email-19bf9d8aa6d173a6.md  20260128-154116-email-19bfb829e2bf98d4.md  20260128-154116-email-19bfd3458dbab189.md  20260128-154116-email-19bfe39d8e49b9c5.md  20260128-154116-email-19bff51cb4d85278.md  20260128-154116-email-19c02575a8e90514.md  20260128-154116-email-19c029fa672a5f98.md  FILE_test_document_20260114_091339.md  FILE_test_quarterly_report_20260114_091447.md
My_AI_Employee/AI_Employee_Vault/Pending_Approval/: test-email-001-approval.md
My_AI_Employee/AI_Employee_Vault/Plans/: PLAN_quarterly_report_Q4_2025_review.md  (+1 more)
My_AI_Employee/docs/: SOCIAL_MEDIA_WATCHER_GUIDE.md
My_AI_Employee/scripts/: login_facebook.py  login_instagram.py  login_twitter.py
My_AI_Employee/summaries/: GOLD_TIER_STATUS.md  ODOO_COMPLETE.md  ODOO_INTEGRATION_COMPLETE.md  ODOO_NEXT_STEPS.md  ODOO_TEST_RESULTS.md  PROJECT_ORGANIZATION.md  US2_IMPROVEMENTS_SUMMARY.md
My_AI_Employee/tests/: check_facebook_session.py  real_facebook_post.py  reauth_facebook.py  test_create_invoice.py  test_odoo_comprehensive.py  test_odoo_login.py  test_odoo_mcp.py  test_odoo_real_connection.py  test_odoo_simple.py  test_odoo_simulation.py  test_session_simple.py  test_social_media_posting.py  verify_invoice.py
My_AI_Employee/watch_folder/: invoice_payment_reminder.txt  meeting_notes_project_alpha.txt  newsletter_january_2026.txt  test_document.txt  test_quarterly_report.txt
(+169 files in other folders)
