[project]
name = "my-ai-employee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syedaashnaghazanfar", email = "nutellacookiesss@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-frontmatter>=1.1.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
