[project]
name = "social-media-browser-mcp"
version = "1.0.0"
description = "Unified browser automation MCP server for Facebook, Instagram, and Twitter/X posting"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
