[project]
name = "xero-accounting"
version = "1.0.0"
description = "Xero accounting integration for Gold Tier AI Employee"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "python-frontmatter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]
